chart-source/fmeserver/templates/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fmeserver-web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: fmeserverweb
              servicePort: 8080
            path: /
          - backend:
              serviceName: fmeserverwebsocket
              servicePort: 7078
            path: /websocket
          # TODO: Remove before merging to master
          - backend:
              serviceName: fmeservereb
              servicePort: 8080
            path: /engine-broker/v1
